# packages/server/src/routes/types/spaces.types.ts
@@ -1,4 +1,5 @@
 import { Type } from '@sinclair/typebox'
+import { AppTypeSchema } from './apps.types.js'
 
 export const NamespaceParamsSchema = Type.Object({
   namespaceSlug: Type.String({ minLength: 1, maxLength: 100 }),
@@ -16,7 +17,7 @@ export const SpaceMemberParamsSchema = Type.Object({
 })
 
 export const CreateSpaceBodySchema = Type.Object({
-  app: Type.Optional(Type.Union([Type.Literal('media'), Type.Null()])),
+  app: Type.Optional(Type.Union([AppTypeSchema, Type.Null()])),
   name: Type.String({ minLength: 1, maxLength: 100 }),
   slug: Type.String({ minLength: 1, maxLength: 100 }),
   type: Type.Union([Type.Literal('git'), Type.Literal('object')]),
@@ -55,7 +56,7 @@ export const UpdateSpaceMemberBodySchema = Type.Object({
 })
 
 export const SpaceResponseSchema = Type.Object({
-  app: Type.Union([Type.Literal('media'), Type.Null()]),
+  app: Type.Union([AppTypeSchema, Type.Null()]),
   objectVersionLimit: Type.Integer({ minimum: 1, maximum: 1000 }),
   objectRetentionDays: Type.Integer({ minimum: 1, maximum: 36500 }),
   id: Type.String({ format: 'uuid' }),
